// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontVariantAlternates renders 0 1`] = `
Array [
  .c0 {
  font-variant-alternates: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders function 1`] = `
Array [
  .c0 {
  font-variant-alternates: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders invalid theme path 1`] = `
Array [
  .c0 {
  font-variant-alternates: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders negative number 1`] = `
Array [
  .c0 {
  font-variant-alternates: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-variant-alternates: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-alternates: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-alternates: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-variant-alternates: July;
}

@media May {
  .c0 {
    font-variant-alternates: August;
  }
}

@media April {
  .c0 {
    font-variant-alternates: September;
  }
}

@media January {
  .c0 {
    font-variant-alternates: November;
  }
}

@media April {
  .c0 {
    font-variant-alternates: August;
  }
}

@media June {
  .c0 {
    font-variant-alternates: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: July;
}

@media May {
  .c0 {
    font-variant-alternates: August;
  }
}

@media April {
  .c0 {
    font-variant-alternates: September;
  }
}

@media January {
  .c0 {
    font-variant-alternates: November;
  }
}

@media April {
  .c0 {
    font-variant-alternates: August;
  }
}

@media June {
  .c0 {
    font-variant-alternates: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-alternates: November;
  }
}

@media April {
  .c0 {
    font-variant-alternates: January;
  }
}

@media January {
  .c0 {
    font-variant-alternates: December;
  }
}

@media April {
  .c0 {
    font-variant-alternates: April;
  }
}

@media June {
  .c0 {
    font-variant-alternates: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-alternates: November;
  }
}

@media April {
  .c0 {
    font-variant-alternates: January;
  }
}

@media January {
  .c0 {
    font-variant-alternates: December;
  }
}

@media April {
  .c0 {
    font-variant-alternates: April;
  }
}

@media June {
  .c0 {
    font-variant-alternates: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-variant-alternates: July;
  }
}

@media April {
  .c0 {
    font-variant-alternates: August;
  }
}

@media January {
  .c0 {
    font-variant-alternates: September;
  }
}

@media April {
  .c0 {
    font-variant-alternates: November;
  }
}

@media June {
  .c0 {
    font-variant-alternates: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-variant-alternates: July;
  }
}

@media April {
  .c0 {
    font-variant-alternates: August;
  }
}

@media January {
  .c0 {
    font-variant-alternates: September;
  }
}

@media April {
  .c0 {
    font-variant-alternates: November;
  }
}

@media June {
  .c0 {
    font-variant-alternates: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-alternates: January;
  }
}

@media April {
  .c0 {
    font-variant-alternates: December;
  }
}

@media January {
  .c0 {
    font-variant-alternates: April;
  }
}

@media April {
  .c0 {
    font-variant-alternates: May;
  }
}

@media June {
  .c0 {
    font-variant-alternates: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-alternates: January;
  }
}

@media April {
  .c0 {
    font-variant-alternates: December;
  }
}

@media January {
  .c0 {
    font-variant-alternates: April;
  }
}

@media April {
  .c0 {
    font-variant-alternates: May;
  }
}

@media June {
  .c0 {
    font-variant-alternates: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders postitive number 1`] = `
Array [
  .c0 {
  font-variant-alternates: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders string 1`] = `
Array [
  .c0 {
  font-variant-alternates: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantAlternates renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontVariantAlternates renders valid theme path 1`] = `
Array [
  .c0 {
  font-variant-alternates: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-alternates: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
